==> NathanMOlson/ubxlib/port/platform/zephyr/src/u_port_uart.c <==
# include "u_cfg_override.h" // For a customer's configuration override
#include <version.h>
#include <zephyr/types.h>
#include <zephyr/kernel.h>
#include <zephyr/device.h>
#include <zephyr/drivers/uart.h>
#include <zephyr/types.h>
#include <kernel.h>
#include <device.h>
#include <drivers/uart.h>
#include <soc.h>
#include "stddef.h"    // NULL, size_t etc.
#include "stdint.h"    // int32_t etc.
#include "stdbool.h"
#include "stdio.h"
#include "u_cfg_sw.h"
#include "u_cfg_hw_platform_specific.h"
#include "u_cfg_os_platform_specific.h" // For U_CFG_OS_YIELD_MS
#include "u_compiler.h" // U_ATOMIC_XXX() macros
#include "u_error_common.h"
#include "u_linked_list.h"
#include "u_port_debug.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_event_queue.h"
#include "u_port_uart.h"
#include "string.h" // For memcpy()
#define U_ZEPHYR_PORT_UART_INTERRUPT_DRIVEN_NUM_NOPS 50

static void uartClose(uPortUartData_t *pUartData)
{
    k_free(pUartData->pBuffer);
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
    uart_irq_rx_disable(pUartData->pDevice);
    uart_irq_tx_disable(pUartData->pDevice);
#else
    k_timer_stop(&pUartData->pollTimer);
#endif
    uLinkedListRemove(&gpUartData, pUartData);
    k_free(pUartData);
    U_ATOMIC_DECREMENT(&gResourceAllocCount);
}

int32_t uPortUartOpen(int32_t uart, int32_t baudRate,
                      void *pReceiveBuffer,
                      size_t receiveBufferSizeBytes,
                      int32_t pinTx, int32_t pinRx,
                      int32_t pinCts, int32_t pinRts)
{
    uErrorCode_t handleOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;
    const struct device *pDevice;
    uPortUartData_t *pUartData;

    // Note that the pins passed into this function must be set
    // to -1 since the Zephyr platform used on NRF53 does not
    // permit the pin assignments to be set at run-time, only at
    // compile-time.  To obtain the real values for your peripheral
    // pin assignments take a look at the macros U_CFG_TEST_PIN_UART_A_xxx_GET
    // (e.g. U_CFG_TEST_PIN_UART_A_TXD_GET) in the file
    // `u_cfg_test_plaform_specific.h` for this platform, which
    // demonstrate a mechanism for doing this.

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        if ((uart >= 0) && (pReceiveBuffer == NULL) &&
            (pinTx < 0) && (pinRx < 0) && (pinCts < 0) && (pinRts < 0)) {
            handleOrErrorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
            pUartData = pGetUartData(uart);
            pDevice = pGetDevice(uart);
            if ((pUartData == NULL) && (pDevice != NULL)) {
                handleOrErrorCode = U_ERROR_COMMON_NO_MEMORY;
                pUartData = (uPortUartData_t *) k_malloc(sizeof(*pUartData));
                if (pUartData != NULL) {
                    memset(pUartData, 0, sizeof(*pUartData));
                    pUartData->pBuffer = k_malloc(receiveBufferSizeBytes);
                    if (pUartData->pBuffer != NULL) {
                        if (uLinkedListAdd(&gpUartData, pUartData)) {
                            pUartData->uart = uart;
                            pUartData->pDevice = pDevice;
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
                            k_sem_init(&(pUartData->txSem), 0, 1);
                            k_fifo_init(&(pUartData->fifoTxData));
#endif
                            pUartData->receiveBufferSizeBytes = receiveBufferSizeBytes;
                            pUartData->eventQueueHandle = -1;
                            k_timer_init(&(pUartData->rxTimer), rxTimer, NULL);
                            k_timer_user_data_set(&(pUartData->rxTimer), (void *)pUartData);

                            uart_config_get(pUartData->pDevice, &(pUartData->config));
                            // Flow control is set in the .overlay file
                            // by including the line:
                            //     hw-flow-control;
                            // in the definition of the relevant UART
                            // so all we need to configure here is the
                            // baud rate as everything else is good at the
                            // default values (8N1).
                            pUartData->config.baudrate = baudRate;
                            uart_configure(pUartData->pDevice, &(pUartData->config));
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
                            uart_irq_callback_user_data_set(pUartData->pDevice, uartCb, (void *)pUartData);
                            uart_irq_rx_enable(pUartData->pDevice);
#else
                            k_timer_init(&(pUartData->pollTimer), pollTimer, NULL);
                            k_timer_user_data_set(&(pUartData->pollTimer), (void *)pUartData);
                            k_timer_start(&(pUartData->pollTimer), K_MSEC(1), K_MSEC(1));
#endif
                            U_ATOMIC_INCREMENT(&gResourceAllocCount);
                            handleOrErrorCode = uart;
                        } else {
                            // Clean up on error
                            k_free(pUartData->pBuffer);
                            k_free(pUartData);
                        }
                    } else {
                        // Clean up on error
                        k_free(pUartData);
                    }
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) handleOrErrorCode;
}

int32_t uPortUartGetReceiveSize(int32_t handle)
{
    uErrorCode_t sizeOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;
    uPortUartData_t *pUartData;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        sizeOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        pUartData = pGetUartData(handle);
        if (pUartData != NULL) {
            if (pUartData->bufferFull) {
                sizeOrErrorCode = pUartData->receiveBufferSizeBytes;
            } else {
                sizeOrErrorCode = pUartData->bufferWrite - pUartData->bufferRead;

                if (sizeOrErrorCode < 0) {
                    sizeOrErrorCode = (pUartData->receiveBufferSizeBytes - pUartData->bufferRead) +
                                      pUartData->bufferWrite;
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) sizeOrErrorCode;
}

int32_t uPortUartRead(int32_t handle, void *pBuffer,
                      size_t sizeBytes)
{
    uErrorCode_t sizeOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;
    uPortUartData_t *pUartData;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        sizeOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        pUartData = pGetUartData(handle);
        if ((pUartData != NULL) && (pBuffer != NULL) && (sizeBytes > 0)) {
            if (pUartData->bufferWrite == pUartData->bufferRead &&
                pUartData->bufferFull == false) {
                sizeOrErrorCode = 0;
            } else {
                int32_t toRead = 0;
                if (pUartData->bufferFull) {
                    sizeOrErrorCode = pUartData->receiveBufferSizeBytes;
                } else {
                    sizeOrErrorCode = pUartData->bufferWrite - pUartData->bufferRead;

                    if (sizeOrErrorCode == 0) {
                        sizeOrErrorCode = pUartData->receiveBufferSizeBytes;
                    } else if (sizeOrErrorCode < 0) {
                        sizeOrErrorCode = (pUartData->receiveBufferSizeBytes - pUartData->bufferRead) +
                                          pUartData->bufferWrite;
                    }
                }

                if (sizeOrErrorCode > sizeBytes) {
                    sizeOrErrorCode = sizeBytes;
                }

                toRead = sizeOrErrorCode;

                uint32_t read = MIN(toRead, pUartData->receiveBufferSizeBytes -
                                    pUartData->bufferRead);
                memcpy(pBuffer, pUartData->pBuffer + pUartData->bufferRead, read);
                toRead -= read;
                pUartData->bufferRead += read;
                pUartData->bufferRead %= pUartData->receiveBufferSizeBytes;

                if (toRead > 0) {
                    memcpy((char *)pBuffer + read, pUartData->pBuffer, toRead);
                    pUartData->bufferRead += toRead;
                }

                pUartData->bufferFull = false;
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
                uart_irq_rx_enable(pUartData->pDevice);
#endif
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) sizeOrErrorCode;
}

int32_t uPortUartWrite(int32_t handle, const void *pBuffer,
                       size_t sizeBytes)
{
    uErrorCode_t errorCode = U_ERROR_COMMON_NOT_INITIALISED;
    uPortUartData_t *pUartData;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        pUartData = pGetUartData(handle);
        if ((pUartData != NULL) && (pBuffer != NULL) && (sizeBytes > 0) &&
            (sizeBytes < UINT16_MAX)) {
            errorCode = sizeBytes;
            // Hint when debugging: if your code stops dead here
            // it is because the CTS line of this MCU's UART HW
            // is floating high, stopping the UART from
            // transmitting once its buffer is full: either
            // the thing at the other end doesn't want data sent to
            // it or the CTS pin when configuring this UART
            // was wrong and it's not connected to the right
            // thing.
#ifdef CONFIG_UART_INTERRUPT_DRIVEN
            struct uartData_t data;
            data.handle = handle;
            data.pData = (void *)pBuffer;
            data.len = (uint16_t) sizeBytes;

            k_fifo_put(&(pUartData->fifoTxData), &data);
            uart_irq_tx_enable(pUartData->pDevice);
            // UART write is async to wait here to make this function synchronous
            k_sem_take(&(pUartData->txSem), K_FOREVER);
#else
            // When we have no interrupts we can block right here
            const unsigned char *pBufferUnsignedChar = (const unsigned char *) pBuffer;
            while (sizeBytes > 0) {
                uart_poll_out(pUartData->pDevice, *pBufferUnsignedChar);
                pBufferUnsignedChar++;
                sizeBytes--;
            }
#endif
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) errorCode;
}

bool uPortUartIsRtsFlowControlEnabled(int32_t handle)
{
    bool rtsFlowControlIsEnabled = false;
    uPortUartData_t *pUartData;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        pUartData = pGetUartData(handle);
        if ((pUartData != NULL) &&
            (pUartData->config.flow_ctrl == UART_CFG_FLOW_CTRL_RTS_CTS)) {
            rtsFlowControlIsEnabled = true;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return rtsFlowControlIsEnabled;
}

bool uPortUartIsCtsFlowControlEnabled(int32_t handle)
{
    bool ctsFlowControlIsEnabled = false;
    uPortUartData_t *pUartData;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        pUartData = pGetUartData(handle);
        if ((pUartData != NULL) &&
            (pUartData->config.flow_ctrl == UART_CFG_FLOW_CTRL_RTS_CTS)) {
            ctsFlowControlIsEnabled = true;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return ctsFlowControlIsEnabled;
}
