==> NathanMOlson/ubxlib/port/platform/stm32cube/src/u_port_uart.c <==
# include "u_cfg_override.h" // For a customer's configuration override
#include "stddef.h"    // NULL, size_t etc.
#include "stdint.h"    // int32_t etc.
#include "stdbool.h"
#include "stdio.h"     // snprintf()
#include "u_cfg_sw.h"
#include "u_cfg_hw_platform_specific.h"
#include "u_cfg_os_platform_specific.h" // For U_CFG_OS_YIELD_MS
#include "u_compiler.h" // U_ATOMIC_XXX() macros
#include "u_error_common.h"
#include "u_port_clib_platform_specific.h" /* Integer stdio, must be included
#include "u_port_debug.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_heap.h"
#include "u_port_event_queue.h"
#include "u_port_uart.h"
#include "stm32f4xx_ll_bus.h"
#include "stm32f4xx_ll_gpio.h"
#include "stm32f4xx_ll_dma.h"
#include "stm32f4xx_ll_usart.h"
#include "cmsis_os.h"
#include "u_port_private.h"  // Down here 'cos it needs GPIO_TypeDef
#include "string.h" // for memcpy()
#define U_PORT_MAX_NUM_UARTS 8
#define U_PORT_MAX_NUM_DMA_ENGINES 2
#define U_PORT_MAX_NUM_DMA_STREAMS 8

static void uartClose(int32_t handle)
{
    uPortUartData_t *pUartData;
    USART_TypeDef *pUartReg;
    uint32_t dmaEngine;
    uint32_t dmaStream;

    pUartData = pGetUartDataByHandle(handle);
    if (pUartData != NULL) {

        pUartReg = gUartCfg[pUartData->uart].pReg;
        dmaEngine = gUartCfg[pUartData->uart].dmaEngine;
        dmaStream = gUartCfg[pUartData->uart].dmaStream;

        // Disable DMA and UART/USART interrupts
        NVIC_DisableIRQ(gpDmaStreamIrq[dmaEngine][dmaStream]);
        NVIC_DisableIRQ(gUartCfg[pUartData->uart].irq);

        // Disable DMA and USART, waiting for DMA to be
        // disabled first according to the note in
        // section 10.3.17 of ST's RM0090.
        LL_DMA_DisableStream(gpDmaReg[dmaEngine], dmaStream);
        while (LL_DMA_IsEnabledStream(gpDmaReg[dmaEngine], dmaStream)) {}
        LL_USART_Disable(pUartReg);
        LL_USART_DeInit(pUartReg);

        // Remove the callback if there is one
        if (pUartData->eventQueueHandle >= 0) {
            uPortEventQueueClose(pUartData->eventQueueHandle);
        }
        if (pUartData->rxBufferIsMalloced) {
            // Free the buffer
            uPortFree(pUartData->pRxBufferStart);
        }
        // And finally remove the UART from the list
        removeUart(pUartData);
        U_ATOMIC_DECREMENT(&gResourceAllocCount);
    }
}

int32_t uPortUartOpen(int32_t uart, int32_t baudRate,
                      void *pReceiveBuffer,
                      size_t rxBufferSizeBytes,
                      int32_t pinTx, int32_t pinRx,
                      int32_t pinCts, int32_t pinRts)
{
    uErrorCode_t handleOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;
    ErrorStatus platformError;
    uPortUartData_t uartData = {0};
    LL_USART_InitTypeDef usartInitStruct = {0};
    LL_GPIO_InitTypeDef gpioInitStruct = {0};
    USART_TypeDef *pUartReg;
    uint32_t dmaEngine;
    DMA_TypeDef *pDmaReg;
    uint32_t dmaStream;
    uint32_t dmaChannel;
    IRQn_Type uartIrq;
    IRQn_Type dmaIrq;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        if ((uart > 0) && (uart <= U_PORT_MAX_NUM_UARTS) &&
            (baudRate >= 0) && (rxBufferSizeBytes > 0) &&
            (pinRx >= 0) && (pinTx >= 0)) {
            if (pGetUartDataByUart(uart) == NULL) {
                handleOrErrorCode = U_ERROR_COMMON_NO_MEMORY;
                uartData.uart = uart;
                uartData.rxBufferIsMalloced = false;
                uartData.pRxBufferStart = (char *) pReceiveBuffer;
                if (uartData.pRxBufferStart == NULL) {
                    // Malloc memory for the read buffer
                    uartData.pRxBufferStart = (char *) pUPortMalloc(rxBufferSizeBytes);
                    uartData.rxBufferIsMalloced = true;
                }
                if (uartData.pRxBufferStart != NULL) {
                    uartData.rxBufferSizeBytes = rxBufferSizeBytes;
                    uartData.pConstData = &(gUartCfg[uart]);
                    uartData.pRxBufferRead = uartData.pRxBufferStart;
                    uartData.pRxBufferWrite = uartData.pRxBufferStart;
                    uartData.ctsSuspended = false;
                    uartData.eventQueueHandle = -1;

                    pUartReg = gUartCfg[uart].pReg;
                    dmaEngine = gUartCfg[uart].dmaEngine;
                    pDmaReg = gpDmaReg[dmaEngine];
                    dmaStream = gUartCfg[uart].dmaStream;
                    dmaChannel = gUartCfg[uart].dmaChannel;
                    uartIrq = gUartCfg[uart].irq;
                    dmaIrq = gpDmaStreamIrq[dmaEngine][dmaStream];

                    // Now do the platform stuff
                    handleOrErrorCode = U_ERROR_COMMON_PLATFORM;

                    // Enable clock to the UART/USART HW block
                    gLlApbClkEnable[uart](gLlApbGrpPeriphUart[uart]);

                    // Enable clock to the DMA HW block (all DMAs
                    // are on bus 1)
                    LL_AHB1_GRP1_EnableClock(gLlApbGrpPeriphDma[dmaEngine]);

                    // Configure the GPIOs
                    // Note, using the LL driver rather than our
                    // driver or the HAL driver here partly because
                    // the example code does that and also
                    // because we need to enable the alternate
                    // function for these pins.

                    // Enable clock to the registers for the Tx/Rx pins
                    uPortPrivateGpioEnableClock(pinTx);
                    uPortPrivateGpioEnableClock(pinRx);
                    // The Pin field is a bitmap so we can do Tx and Rx
                    // at the same time as they are always on the same port
                    gpioInitStruct.Pin = (1U << U_PORT_STM32F4_GPIO_PIN(pinTx)) |
                                         (1U << U_PORT_STM32F4_GPIO_PIN(pinRx));
                    gpioInitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
                    // Note: we used to set the speed to LL_GPIO_SPEED_FREQ_VERY_HIGH
                    // but that seemed to cause significant comms failures; setting
                    // the speed to low (up to 8 MHz) is more reliable and perfectly
                    // sufficient for what is needed here
                    gpioInitStruct.Speed = GPIO_SPEED_FREQ_LOW;
                    // Output type doesn't matter, it is overridden by
                    // the alternate function
                    gpioInitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
                    gpioInitStruct.Pull = LL_GPIO_PULL_UP;
                    gpioInitStruct.Alternate = gGpioAf[uart];
                    platformError = LL_GPIO_Init(pUPortPrivateGpioGetReg(pinTx),
                                                 &gpioInitStruct);

                    //  Configure RTS if present
                    if ((pinRts >= 0) && (platformError == SUCCESS)) {
                        uPortPrivateGpioEnableClock(pinRts);
                        gpioInitStruct.Pin = 1U << U_PORT_STM32F4_GPIO_PIN(pinRts);
                        platformError = LL_GPIO_Init(pUPortPrivateGpioGetReg(pinRts),
                                                     &gpioInitStruct);
                    }

                    //  Configure CTS if present
                    if ((pinCts >= 0) && (platformError == SUCCESS)) {
                        uPortPrivateGpioEnableClock(pinCts);
                        gpioInitStruct.Pin = 1U << U_PORT_STM32F4_GPIO_PIN(pinCts);
                        // The u-blox C030-R412M board requires a pull-down here
                        gpioInitStruct.Pull = LL_GPIO_PULL_DOWN;
                        platformError = LL_GPIO_Init(pUPortPrivateGpioGetReg(pinCts),
                                                     &gpioInitStruct);
                    }

                    // Configure DMA
                    if (platformError == SUCCESS) {
                        // Set the channel on our DMA/Stream
                        LL_DMA_SetChannelSelection(pDmaReg, dmaStream,
                                                   gLlDmaChannel[dmaChannel]);
                        // Towards RAM
                        LL_DMA_SetDataTransferDirection(pDmaReg, dmaStream,
                                                        LL_DMA_DIRECTION_PERIPH_TO_MEMORY);
                        // Low priority
                        LL_DMA_SetStreamPriorityLevel(pDmaReg, dmaStream,
                                                      LL_DMA_PRIORITY_LOW);
                        // Circular
                        LL_DMA_SetMode(pDmaReg, dmaStream, LL_DMA_MODE_CIRCULAR);
                        // Byte-wise transfers from a fixed
                        // register in a peripheral to an
                        // incrementing location in memory
                        LL_DMA_SetPeriphIncMode(pDmaReg, dmaStream,
                                                LL_DMA_PERIPH_NOINCREMENT);
                        LL_DMA_SetMemoryIncMode(pDmaReg, dmaStream,
                                                LL_DMA_MEMORY_INCREMENT);
                        LL_DMA_SetPeriphSize(pDmaReg, dmaStream,
                                             LL_DMA_PDATAALIGN_BYTE);
                        LL_DMA_SetMemorySize(pDmaReg, dmaStream,
                                             LL_DMA_MDATAALIGN_BYTE);
                        // Not FIFO mode, whatever that is
                        LL_DMA_DisableFifoMode(pDmaReg, dmaStream);

                        // Attach the DMA to the UART at one end
                        LL_DMA_SetPeriphAddress(pDmaReg, dmaStream,
                                                (uint32_t) & (pUartReg->DR));

                        // ...and to the RAM buffer at the other end
                        LL_DMA_SetMemoryAddress(pDmaReg, dmaStream,
                                                (uint32_t) (uartData.pRxBufferStart));
                        LL_DMA_SetDataLength(pDmaReg, dmaStream,
                                             uartData.rxBufferSizeBytes);

                        // Clear all the DMA flags and the DMA pending IRQ from any previous
                        // session first, or an unexpected interrupt may result
                        gpLlDmaClearFlagHt[dmaStream](pDmaReg);
                        gpLlDmaClearFlagTc[dmaStream](pDmaReg);
                        gpLlDmaClearFlagTe[dmaStream](pDmaReg);
                        gpLlDmaClearFlagDme[dmaStream](pDmaReg);
                        gpLlDmaClearFlagFe[dmaStream](pDmaReg);
                        NVIC_ClearPendingIRQ(dmaIrq);

                        // Enable half full and transmit complete DMA interrupts
                        LL_DMA_EnableIT_HT(pDmaReg, dmaStream);
                        LL_DMA_EnableIT_TC(pDmaReg, dmaStream);

                        // Set DMA priority
                        NVIC_SetPriority(dmaIrq,
                                         NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 5, 0));

                        // Go!
                        NVIC_EnableIRQ(dmaIrq);

                        // Initialise the UART/USART
                        usartInitStruct.BaudRate = baudRate;
                        usartInitStruct.DataWidth = LL_USART_DATAWIDTH_8B;
                        usartInitStruct.StopBits = LL_USART_STOPBITS_1;
                        usartInitStruct.Parity = LL_USART_PARITY_NONE;
                        // Both transmit and received enabled
                        usartInitStruct.TransferDirection = LL_USART_DIRECTION_TX_RX;
                        usartInitStruct.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
                        if ((pinRts >= 0) || (pinCts >= 0)) {
                            if ((pinRts >= 0) && (pinCts >= 0)) {
                                usartInitStruct.HardwareFlowControl = LL_USART_HWCONTROL_RTS_CTS;
                            } else {
                                if (pinRts >= 0) {
                                    usartInitStruct.HardwareFlowControl = LL_USART_HWCONTROL_RTS;
                                } else {
                                    usartInitStruct.HardwareFlowControl = LL_USART_HWCONTROL_CTS;
                                }
                            }
                        }
                        usartInitStruct.OverSampling = LL_USART_OVERSAMPLING_16;
                        platformError = LL_USART_Init(pUartReg, &usartInitStruct);
                    }

                    // Connect it all together
                    if (platformError == SUCCESS) {
                        // Asynchronous UART/USART with DMA on the receive
                        // and include only the idle line interrupt,
                        // DMA does the rest
                        LL_USART_ConfigAsyncMode(pUartReg);
                        LL_USART_EnableDMAReq_RX(pUartReg);
                        LL_USART_EnableIT_IDLE(pUartReg);

                        // Enable the UART/USART interrupt
                        NVIC_SetPriority(uartIrq,
                                         NVIC_EncodePriority(NVIC_GetPriorityGrouping(),
                                                             5, 1));
                        LL_USART_ClearFlag_IDLE(pUartReg);
                        NVIC_ClearPendingIRQ(uartIrq);
                        NVIC_EnableIRQ(uartIrq);

                        // Enable DMA and UART/USART
                        LL_DMA_EnableStream(pDmaReg, dmaStream);
                        LL_USART_Enable(pUartReg);
                    }

                    // Finally, add the UART to the list
                    if (platformError == SUCCESS) {
                        handleOrErrorCode = U_ERROR_COMMON_NO_MEMORY;
                        uartData.uartHandle = nextHandleGet();
                        if (pAddUart(&uartData) != NULL) {
                            handleOrErrorCode = uartData.uartHandle;
                            U_ATOMIC_INCREMENT(&gResourceAllocCount);
                        }
                    }
                }

                // If we failed, clean up
                if (handleOrErrorCode < 0) {
                    if (uartData.rxBufferIsMalloced) {
                        uPortFree(uartData.pRxBufferStart);
                    }
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) handleOrErrorCode;
}

int32_t uPortUartGetReceiveSize(int32_t handle)
{
    uErrorCode_t sizeOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;
    uPortUartData_t *pUartData;
    const volatile char *pRxBufferWrite;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        sizeOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        pUartData = pGetUartDataByHandle(handle);
        if (pUartData != NULL) {
            pRxBufferWrite = pUartData->pRxBufferWrite;
            sizeOrErrorCode = 0;
            if (pUartData->pRxBufferRead < pRxBufferWrite) {
                // Read pointer is behind write, bytes
                // received is simply the difference
                sizeOrErrorCode = pRxBufferWrite - pUartData->pRxBufferRead;
            } else if (pUartData->pRxBufferRead > pRxBufferWrite) {
                // Read pointer is ahead of write, bytes received
                // is from the read pointer up to the end of the buffer
                // then wrap around to the write pointer
                sizeOrErrorCode = (pUartData->pRxBufferStart +
                                   pUartData->rxBufferSizeBytes -
                                   pUartData->pRxBufferRead) +
                                  (pRxBufferWrite - pUartData->pRxBufferStart);
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) sizeOrErrorCode;
}

int32_t uPortUartRead(int32_t handle, void *pBuffer,
                      size_t sizeBytes)
{
    uint8_t *pDataPtr = pBuffer;
    uErrorCode_t sizeOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;
    size_t thisSize;
    uPortUartData_t *pUartData;
    const volatile char *pRxBufferWrite;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        sizeOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        pUartData = pGetUartDataByHandle(handle);
        if (pUartData != NULL) {
            pRxBufferWrite = pUartData->pRxBufferWrite;
            if (pUartData->pRxBufferRead < pRxBufferWrite) {
                // Read pointer is behind write, just take as much
                // of the difference as the user allows
                sizeOrErrorCode = pRxBufferWrite - pUartData->pRxBufferRead;
                if (sizeOrErrorCode > sizeBytes) {
                    sizeOrErrorCode = sizeBytes;
                }
                memcpy(pDataPtr, pUartData->pRxBufferRead,
                       sizeOrErrorCode);
                // Move the pointer on
                pUartData->pRxBufferRead += sizeOrErrorCode;
            } else if (pUartData->pRxBufferRead > pRxBufferWrite) {
                // Read pointer is ahead of write, first take up to the
                // end of the buffer as far as the user allows
                thisSize = pUartData->pRxBufferStart +
                           pUartData->rxBufferSizeBytes -
                           pUartData->pRxBufferRead;
                if (thisSize > sizeBytes) {
                    thisSize = sizeBytes;
                }
                memcpy(pDataPtr, pUartData->pRxBufferRead, thisSize);
                pDataPtr = pDataPtr + thisSize;
                sizeBytes -= thisSize;
                sizeOrErrorCode = thisSize;
                // Move the read pointer on, wrapping as necessary
                pUartData->pRxBufferRead += thisSize;
                if (pUartData->pRxBufferRead >= pUartData->pRxBufferStart +
                    pUartData->rxBufferSizeBytes) {
                    pUartData->pRxBufferRead = pUartData->pRxBufferStart;
                }
                // If there is still room in the user buffer then
                // carry on taking up to the write pointer
                if (sizeBytes > 0) {
                    thisSize = pRxBufferWrite - pUartData->pRxBufferRead;
                    if (thisSize > sizeBytes) {
                        thisSize = sizeBytes;
                    }
                    memcpy(pDataPtr, pUartData->pRxBufferRead, thisSize);
                    sizeOrErrorCode += thisSize;
                    // Move the read pointer on
                    pUartData->pRxBufferRead += thisSize;
                }
            } else {
                sizeOrErrorCode = 0;
            }

        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) sizeOrErrorCode;
}

int32_t uPortUartWrite(int32_t handle,
                       const void *pBuffer,
                       size_t sizeBytes)
{
    int32_t sizeOrErrorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    const uint8_t *pDataPtr = pBuffer;
    uPortUartData_t *pUartData;
    USART_TypeDef *pReg;
    bool txOk = true;
    int32_t startTimeMs;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        sizeOrErrorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        pUartData = pGetUartDataByHandle(handle);
        if (pUartData != NULL) {
            pReg = gUartCfg[pUartData->uart].pReg;
            // Do the blocking send
            sizeOrErrorCode = (int32_t) sizeBytes;
            startTimeMs = uPortGetTickTimeMs();
            while ((sizeBytes > 0) && (txOk)) {
                LL_USART_TransmitData8(pReg, *pDataPtr);
                // Hint when debugging: if your code stops dead here
                // it is because the CTS line of this MCU's UART HW
                // is floating high, stopping the UART from
                // transmitting once its buffer is full: either
                // the thing at the other end doesn't want data sent to
                // it or the CTS pin when configuring this UART
                // was wrong and it's not connected to the right
                // thing.
                while (!(txOk = LL_USART_IsActiveFlag_TXE(pReg)) &&
                       (uPortGetTickTimeMs() - startTimeMs < U_PORT_UART_WRITE_TIMEOUT_MS)) {}
                if (txOk) {
                    pDataPtr++;
                    sizeBytes--;
                }
            }
            // Wait for transmission to complete so that we don't
            // write over stuff the next time
            while (!LL_USART_IsActiveFlag_TC(pReg) &&
                   (uPortGetTickTimeMs() - startTimeMs < U_PORT_UART_WRITE_TIMEOUT_MS)) {}
            sizeOrErrorCode -= (int32_t) sizeBytes;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return sizeOrErrorCode;
}

bool uPortUartIsRtsFlowControlEnabled(int32_t handle)
{
    uPortUartData_t *pUartData;
    bool rtsFlowControlIsEnabled = false;
    uint32_t flowControlStatus;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        pUartData = pGetUartDataByHandle(handle);
        if (pUartData != NULL) {
            flowControlStatus = LL_USART_GetHWFlowCtrl(gUartCfg[pUartData->uart].pReg);
            if ((flowControlStatus == LL_USART_HWCONTROL_RTS) ||
                (flowControlStatus == LL_USART_HWCONTROL_RTS_CTS)) {
                rtsFlowControlIsEnabled = true;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return rtsFlowControlIsEnabled;
}

bool uPortUartIsCtsFlowControlEnabled(int32_t handle)
{
    uPortUartData_t *pUartData;
    bool ctsFlowControlIsEnabled = false;
    uint32_t flowControlStatus;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        pUartData = pGetUartDataByHandle(handle);
        if (pUartData != NULL) {
            flowControlStatus = LL_USART_GetHWFlowCtrl(gUartCfg[pUartData->uart].pReg);
            if ((flowControlStatus == LL_USART_HWCONTROL_CTS) ||
                (flowControlStatus == LL_USART_HWCONTROL_RTS_CTS)) {
                ctsFlowControlIsEnabled = true;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return ctsFlowControlIsEnabled;
}
